...
                    alt="Background shape"
                    fill
                    className="object-cover opacity-10 -rotate-90"
                />
            </div>
            <h1 className='text-xl lg:text-2xl xl:text-3xl leading-tight font-bold text-center text-primary'>
                Annonces récentes
            </h1>
            <PropertyCarousel properties={data?.pages[0]?.properties ?? []} recommendationContext="home" />
        </section>
    )
}

